--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ Date of creation: 4/9/2025
         </title>
         <meta charset="UTF-8">
 
-        <link rel="stylesheet" type="text/css" href="../css/style.css">
+        <link rel="stylesheet" type="text/css" href="./css/style.css">
 
         <style>
             h1
@@ -42,8 +42,8 @@ Date of creation: 4/9/2025
         <hr>
         <div id="special-section">
             <a href="index.html"><strong>Home</strong></a> 
-            <a href="about.html"><strong>About</strong></a>
-            <a href="contact.html"><strong>Contact</strong></a>
+            <a href="./html/about.html"><strong>About</strong></a>
+            <a href="./html/contact.html"><strong>Contact</strong></a>
         </div>
         <hr>
 
@@ -100,7 +100,7 @@ Date of creation: 4/9/2025
                 </h4>     
                 <div style="text-align: center;">
                     <abbr title="Garena Free Fire">
-                        <img src="../images/freefire.jpg" alt="Sorry! The server is down right now.">
+                        <img src="./images/freefire.jpg" alt="Sorry! The server is down right now.">
                     </abbr>
                 </div>
             </li>
@@ -116,7 +116,7 @@ Date of creation: 4/9/2025
                 </h4>
                 <div style="text-align: center;">
                     <abbr title="Among Us">
-                        <img src="../images/amongUs.jpg" alt="Sorry!The server is down right now.">
+                        <img src="./images/amongUs.jpg" alt="Sorry!The server is down right now.">
                     </abbr>
                 </div>
             </li>
@@ -132,7 +132,7 @@ Date of creation: 4/9/2025
                 </h4>
                 <div style="text-align: center;">
                     <abbr title="Babie Dreamhouse Adventure">
-                        <img src="../images/barbie.jpg" alt="Sorry!The server is down right now.">
+                        <img src="./images/barbie.jpg" alt="Sorry!The server is down right now.">
                     </abbr>
                 </div>
                 
